Convert to PHPStorm project

--- a/.gitignore
+++ b/.gitignore
@@ -27,20 +27,12 @@
 
 ## Plugin-specific files:
 
-# IntelliJ
-/out/
-
 # mpeltonen/sbt-idea plugin
 .idea_modules/
 
-# JIRA plugin
-atlassian-ide-plugin.xml
+.idea/dictionaries/
 
-# Crashlytics plugin (for Android Studio and IntelliJ)
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
-fabric.properties
+vendor/
 
 ### PhpStorm Patch ###
 # Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
@@ -49,3 +41,4 @@ fabric.properties
 # modules.xml
 # .idea/misc.xml
 # *.ipr
+*.phar
