--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "ducohosting/whmcs-enom-updater",
   "description": "Update WHMCS domain prices based on eNom wholesale fees",
   "minimum-stability": "dev",
+  "version": "1.1.0-beta",
   "license": "GPL-3.0+",
   "authors": [
     {
