--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
   "name": "ducohosting/whmcs-enom-updater",
   "description": "Update WHMCS domain prices based on eNom wholesale fees",
-  "minimum-stability": "dev",
-  "version": "1.1.0-beta",
+  "minimum-stability": "stable",
+  "version": "1.1.0-beta1",
   "license": "GPL-3.0+",
   "authors": [
     {
