--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "version": "1.1.0-beta3",
   "license": "GPL-3.0+",
   "archive": {
-    "exclude": [".idea", "vendor", "*.json", "*.phar", "*.lock", ".git", ".gitignore", "*.zip"]
+    "exclude": [".idea", "vendor", "*.json", "*.phar", "*.lock", ".git", ".gitignore", "*.zip", "*.tar", "includes"]
   },
   "authors": [
     {
