--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
   "minimum-stability": "stable",
   "version": "1.1.0-beta3",
   "license": "GPL-3.0+",
+  "homepage": "https://github.com/ducohosting/whmcs-enom-updater",
   "archive": {
     "exclude": [".idea", "vendor", "*.json", "*.phar", "*.lock", ".git", ".gitignore", "*.zip", "*.tar", "includes"]
   },
