--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@
 .idea/dictionaries/
 
 vendor/
+release/
 
 ### PhpStorm Patch ###
 # Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
