--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "ducohosting/whmcs-enom-updater",
   "description": "Update WHMCS domain prices based on eNom wholesale fees",
   "minimum-stability": "stable",
-  "version": "2.0.0-alpha1",
+  "version": "2.0.0",
   "license": "GPL-3.0+",
   "homepage": "https://github.com/ducohosting/whmcs-enom-updater",
   "archive": {
